maint: update AUTHORS with recent contributors
git shortlog $(git log -1 --format=%H AUTHORS).. | grep -v "^ "

then add missing entries to AUTHORS.

* AUTHORS: Update.

--- a/AUTHORS
+++ b/AUTHORS
@@ -109,6 +109,21 @@ Patches have also been contributed by:
   Ersek Laszlo         <lacos@caesar.elte.hu>
   Kenneth Nagin        <NAGIN@il.ibm.com>
   Klaus Ethgen         <Klaus@Ethgen.de>
+  Bryan Kearney        <bkearney@redhat.com>
+  Darry L. Pierce      <dpierce@redhat.com>
+  David Jorm           <dfj@redhat.com>
+  Eduardo Otubo        <otubo@linux.vnet.ibm.com>
+  Garry Dolley         <gdolley@arpnetworks.com>
+  Harshavardhana       <harsha@gluster.com>
+  Jonas Eriksson       <jonas.j.eriksson@ericsson.com>
+  Jun Koi              <junkoi2004@gmail.com>
+  Olivier Fourdan      <ofourdan@redhat.com>
+  Ron Yorston          <rmy@tigress.co.uk>
+  Shahar Klein         <shaharklein@yahoo.com>
+  Taizo ITO            <taizo.ito@hde.co.jp>
+  Thomas Treutner      <thomas@scripty.at>
+  Jean-Baptiste Rouault <jean-baptiste.rouault@diateam.net>
+  Марк Коренберг       <socketpair@gmail.com>
 
   [....send patches to get your name here....]
 
