Trivial virsh.pod additions --all for "list" command and similar
This is just a trivial patch to virsh.pod (from git master). It adds the
following pieces to the virsh man page:

  + Shows the --inactive and --all optional parameters for the list
    command.

    Closes Bugzilla #575512, reported by Renich Bon Ciric
    https://bugzilla.redhat.com/show_bug.cgi?id=575512

  + Corrects the existing description of the list command, to now say
    that only running domains are listed if no domains are specified.

    The man page up until this point has said all domains are listed if
    no domains are specified, which is incorrect.

  + Adds the "shut off" state to the list of states for the list
    command.

  + Adds a missing =back around line 755, that pod2man was complaining
    was missing.

--- a/AUTHORS
+++ b/AUTHORS
@@ -124,6 +124,7 @@ Patches have also been contributed by:
   Thomas Treutner      <thomas@scripty.at>
   Jean-Baptiste Rouault <jean-baptiste.rouault@diateam.net>
   Марк Коренберг       <socketpair@gmail.com>
+  Justin Clift         <justin@salasaga.org>
 
   [....send patches to get your name here....]
 
