--- a/tools/virsh.pod
+++ b/tools/virsh.pod
@@ -842,10 +842,12 @@ I<vol-name-or-key-or-path> is the name or key or path of the volume to return in
 Return the list of volumes in the given storage pool.
 I<--pool> I<pool-or-uuid> is the name or UUID of the storage pool.
 
-=item B<vol-pool> I<vol-key-or-path>
+=item B<vol-pool> [optional I<--uuid>] I<vol-key-or-path>
 
-Return the pool for a given volume.
-I<vol-key-or-path> is the key or path of the volume to return the pool name for.
+Return the pool name or UUID for a given volume. By default, the pool name is
+returned. If the I<--uuid> option is given, the pool UUID is returned instead.
+I<vol-key-or-path> is the key or path of the volume to return the pool
+information for.
 
 =item B<vol-path> [optional I<--pool> I<pool-or-uuid>] I<vol-name-or-key>
 
