virsh: Fix man page syntax
pod2man prints the following warning when generating virsh.1:

    tools/virsh.pod:890: Unmatched =back

--- a/tools/virsh.pod
+++ b/tools/virsh.pod
@@ -781,6 +781,8 @@ Returns the UUID of the named I<pool>.
 
 =head1 VOLUME COMMANDS
 
+=over 4
+
 =item B<vol-create> I<pool-or-uuid> I<FILE>
 
 Create a volume from an XML <file>.
