--- a/AUTHORS
+++ b/AUTHORS
@@ -125,6 +125,7 @@ Patches have also been contributed by:
   Jean-Baptiste Rouault <jean-baptiste.rouault@diateam.net>
   Марк Коренберг       <socketpair@gmail.com>
   Justin Clift         <justin@salasaga.org>
+  Alan Pevec           <apevec@redhat.com>
 
   [....send patches to get your name here....]
 
