build: use proper pod for nested bulleted VIRSH_DEBUG list
Newer pod (hello rawhide) complains if you attempt to mix bullets
and non-bullets in the same list:

virsh.pod around line 3177: Expected text after =item, not a bullet

As our intent was to nest an inner list, we make that explicit to
keep pod happy.

* tools/virsh.pod (ENVIRONMENT): Use correct pod syntax.

(cherry picked from commit 00d69b4af1215695ebfc8f1dbfa77804c2b293fd)

--- a/tools/virsh.pod
+++ b/tools/virsh.pod
@@ -3098,6 +3098,8 @@ of C<virsh>
 
 Turn on verbose debugging of virsh commands. Valid levels are
 
+=over 4
+
 =item * VIRSH_DEBUG=0
 
 DEBUG - Messages at ALL levels get logged
@@ -3117,6 +3119,8 @@ WARNING - Logs messages at levels WARNING and ERROR
 =item * VIRSH_DEBUG=4
 
 ERROR - Messages at only ERROR level gets logged.
+
+=back
 
 =item VIRSH_LOG_FILE=C<LOGFILE>
 
