--- a/HACKING
+++ b/HACKING
@@ -123,6 +123,11 @@ VIR_TEST_DEBUG may provide larger amounts of information:
   VIR_TEST_DEBUG=1 make check    (or)
   VIR_TEST_DEBUG=2 make check
 
+When debugging failures during development, it is possible to focus in on just
+the failing subtests by using TESTS and VIR_TEST_RANGE:
+
+  make check VIR_TEST_DEBUG=1 VIR_TEST_RANGE=3-5 TESTS=qemuxml2argvtest
+
 Also, individual tests can be run from inside the "tests/" directory, like:
 
   ./qemuxml2xmltest
