--- a/tools/virsh.pod
+++ b/tools/virsh.pod
@@ -1081,8 +1081,8 @@ stats.
 [I<--persistent>] [I<--undefinesource>] [I<--suspend>] [I<--copy-storage-all>]
 [I<--copy-storage-inc>] [I<--change-protection>] [I<--unsafe>] [I<--verbose>]
 [I<--compressed>] [I<--abort-on-error>]
-I<domain> I<desturi> [I<migrateuri>] [I<graphicsuri>] [I<dname>]
-[I<--timeout> B<seconds>] [I<--xml> B<file>]
+I<domain> I<desturi> [I<migrateuri>] [I<graphicsuri>] [I<listen-address>]
+[I<dname>] [I<--timeout> B<seconds>] [I<--xml> B<file>]
 
 Migrate domain to another host.  Add I<--live> for live migration; <--p2p>
 for peer-2-peer migration; I<--direct> for direct migration; or I<--tunnelled>
@@ -1188,6 +1188,12 @@ specific parameters separated by '&'. Currently recognized parameters are
 "tlsPort" and "tlsSubject". For example,
 
     spice://target.host.com:1234/?tlsPort=4567
+
+Optional I<listen-address> sets the listen address that hypervisor on the
+destination side should bind to for incoming migration. Both IPv4 and IPv6
+addresses are accepted as well as hostnames (the resolving is done on
+destination). Some hypervisors do not support this feature and will return an
+error if this parameter is used.
 
 =item B<migrate-setmaxdowntime> I<domain> I<downtime>
 
