virsh: new environment variable VIRSH_HISTSIZE
Allow adjust the number of commands to remember in the command
history.

* tools/virsh.c (vshReadlineInit): Read and sanity the
VIRSH_HISTSIZE variable.
(VIRSH_HISTSIZE_MAX): New constant.
* tools/virsh.pod: Document VIRSH_HISTSIZE variable.

Signed-off-by: Eric Blake <eblake@redhat.com>

--- a/tools/virsh.pod
+++ b/tools/virsh.pod
@@ -3349,6 +3349,11 @@ The editor to use by the B<edit> and related options.
 The editor to use by the B<edit> and related options, if C<VISUAL>
 is not set.
 
+=item VIRSH_HISTSIZE
+
+The number of commands to remember in the command  history.  The
+default value is 500.
+
 =item LIBVIRT_DEBUG=LEVEL
 
 Turn on verbose debugging of all libvirt API calls. Valid levels are
